add teams module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@app/*": ["src/app/*"],
       "@profile/*": ["src/app/profile/*"],
+      "@teams/*": ["src/app/teams/*"],
       "@tournament/*": ["src/app/tournament/*"],
       "@tournaments/*": ["src/app/profile/tournaments/*"],
       "@view-tournament/*": ["src/app/tournament/view-tournament/*"],
