--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@teams/*": ["src/app/teams/*"],
       "@team/*": ["src/app/team/*"],
       "@tournament/*": ["src/app/tournament/*"],
+      "@notifications/*": ["src/app/notifications/*"],
       "@tournaments/*": ["src/app/tournaments/*"],
       "@view-tournament/*": ["src/app/tournament/view-tournament/*"],
       "@shared/*": ["src/app/shared/*"]
