--- a/angular.json
+++ b/angular.json
@@ -105,6 +105,11 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./src/app/styles"
+              ]
+            },
             "scripts": []
           }
         },
